--- a/Tycoon/Areas/Admin/Views/Category/Index.cshtml
+++ b/Tycoon/Areas/Admin/Views/Category/Index.cshtml
@@ -36,7 +36,7 @@
                             @Html.DisplayFor(m => cat.Name)
                         </td>
                         <td>
-                            EDIT | DELETE | DETAILS
+                            <partial name="_TableButtonsPartial" model="cat.Id" />
                         </td>
                     </tr>
 
