--- a/Tycoon/Areas/Admin/Views/SubCategory/Index.cshtml
+++ b/Tycoon/Areas/Admin/Views/SubCategory/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Category>
+﻿@model IEnumerable<SubCategory>
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -7,13 +7,13 @@
 <div class="border backgroundwhite">
     <div class="row">
         <div class="col-6">
-            <h2 class="text-info">Category List</h2>
+            <h2 class="text-info">Sub Category List</h2>
         </div>
         <div class="col-6 text-right">
-           <partial name="_CreateButtonPartial" />
+            <partial name="_CreateButtonPartial" />
         </div>
     </div>
-    <br/>
+    <br />
     <div>
         @if (Model.Count() > 0)
         {
@@ -21,6 +21,9 @@
                 <tr class="table-secondary">
                     <th>
                         @Html.DisplayNameFor(m => m.Name)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(m => m.Category.Name)
                     </th>
                     <th>
 
@@ -31,14 +34,17 @@
                 </tr>
                 @foreach (var cat in Model)
                 {
-                    <tr>
-                        <td>
-                            @Html.DisplayFor(m => cat.Name)
-                        </td>
-                        <td>
-                            <partial name="_TableButtonsPartial" model="cat.Id" />
-                        </td>
-                    </tr>
+            <tr>
+                <td>
+                    @Html.DisplayFor(m => cat.Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(m => cat.Category.Name)
+                </td>
+                <td>
+                    <partial name="_TableButtonsPartial" model="cat.Id" />
+                </td>
+            </tr>
 
                 }
             </table>
@@ -46,7 +52,7 @@
         }
         else
         {
-            <p>There are no categories to display!!</p>
+            <p>There are no sub categories to display!!</p>
         }
 
     </div>
