--- a/Tycoon/Views/Shared/_Layout.cshtml
+++ b/Tycoon/Views/Shared/_Layout.cshtml
@@ -28,9 +28,14 @@
                                 Content Management
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropDownMenuLink">
-                                <a class="dropdown-item" asp-action="Index" asp-controller="Category"
+                                <a class="dropdown-item" 
+                                   asp-action="Index" 
+                                   asp-controller="Category"
                                    asp-area="Admin">Category</a>
-                                <a class="dropdown-item">Sub Category</a>
+                                <a class="dropdown-item"
+                                   asp-action="Index" 
+                                   asp-controller="SubCategory"
+                                   asp-area="Admin">Sub Category</a>
                                 <a class="dropdown-item">Services</a>
                                 <a class="dropdown-item">Coupons</a>
                                 <a class="dropdown-item">Users</a>
