--- a/Tycoon/Areas/Admin/Views/Category/Create.cshtml
+++ b/Tycoon/Areas/Admin/Views/Category/Create.cshtml
@@ -2,7 +2,7 @@
 
 <br />
 <h2 class="text-info">Create Category</h2>
-<br/>
+<br />
 <form method="post" asp-action="Create">
     <div class="border backgroundwhite">
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
@@ -17,9 +17,15 @@
         </div>
         <div class="form-group row">
             <div class="col-5 offset-2">
-               <partial name="_CreateAndBackToListPartial" />
+                <partial name="_CreateAndBackToListPartial" />
             </div>
         </div>
     </div>
 
 </form>
+
+@section Scripts{
+
+    @{ await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+
+}
