--- a/Tycoon/Areas/Admin/Views/Category/Edit.cshtml
+++ b/Tycoon/Areas/Admin/Views/Category/Edit.cshtml
@@ -22,9 +22,14 @@
         </div>
         <div class="form-group row">
             <div class="col-5 offset-2">
-               <partial name="_UpdateAndBackToListPartial" model="@Model.Id" />
+                <partial name="_UpdateAndBackToListPartial" model="@Model.Id" />
             </div>
         </div>
     </div>
 
 </form>
+@section Scripts{
+
+    @{ await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+
+}
