--- a/Tycoon/Views/Shared/_Layout.cshtml
+++ b/Tycoon/Views/Shared/_Layout.cshtml
@@ -41,7 +41,10 @@
                                    asp-action="Index" 
                                    asp-controller="Service"
                                    asp-area="Admin">Services</a>
-                                <a class="dropdown-item">Coupons</a>
+                                <a class="dropdown-item"
+                                   asp-action="Index" 
+                                   asp-controller="Coupon"
+                                   asp-area="Admin">Coupons</a>
                                 <a class="dropdown-item">Users</a>
                             </div>
                         </li>
