--- a/Tycoon/Areas/Customer/Views/Home/Index.cshtml
+++ b/Tycoon/Areas/Customer/Views/Home/Index.cshtml
@@ -1,8 +1,93 @@
-﻿@{
+﻿@model Tycoon.Models.ViewModels.IndexViewModel
+
+@{
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<br />
+
+@if (Model.Coupon.ToList().Count > 0)
+{
+    <div class="border">
+        <div class="carousel" data-ride="carousel" data-interval="2500">
+            @for (int i = 0; i < Model.Coupon.Count(); i++)
+            {
+                if (i == 0)
+                {
+                    <div class="carousel-item active">
+                        @{
+                            var base64 = Convert.ToBase64String(Model.Coupon.ToList()[i].Picture);
+                            var imgSrc = String.Format("data: image/jpg;base64,{0}", base64);
+
+                        }
+
+                        <img src="@imgSrc" height="50px" class="d-block w-100" />
+                    </div>
+                }
+                else
+                {
+                    <div class="carousel-item">
+                        @{
+                            var base64 = Convert.ToBase64String(Model.Coupon.ToList()[i].Picture);
+                            var imgSrc = String.Format("data: image/jpg;base64,{0}", base64);
+
+                        }
+
+                        <img src="@imgSrc" height="50px" class="d-block w-100" />
+                    </div>
+                }
+            }
+        </div>
+    </div>
+}
+
+<br />
+<br />
+<div class="backgroundwhite container">
+
+    <ul id="menu-filters" class="menu-filter-list list-inline text-center">
+        <li class="active btn btn-secondary ml-1 mr-1" data-filter=".tycoon-services">Show All</li>
+        @foreach (var cat in Model.Category)
+        {
+            <li class="ml-1 mr-1"
+                data-filter=".@cat.Name.Replace(" ", string.Empty)">@cat.Name</li>
+            }
+    </ul>
+
+    @foreach (var category in Model.Category)
+    {
+        <div class="row" id="MenuWrapper">
+            <partial name="_ThumbnailAreaPartial"
+                     model="@Model.Service.Where(p=>p.Category.Name.Equals(category.Name))" />
+        </div>
+    }
 </div>
+
+@section Scripts{
+
+    <script src="https://code.jquery.com/jquery-3.4.1.js"
+            integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
+            crossorigin="anonymous"></script>
+
+<script>
+    var posts = $('.post');
+
+    (function ($) {
+        $("#menu-filters li").click(function () {
+            $("#menu-filters li").removeClass('active btn btn-secondary');
+            $(this).addClass('active btn btn-secondary');
+
+            var selectedFilter = $(this).data("filter");
+
+            $(".tycoon-services").fadeOut();
+
+            setTimeout(function () {
+                $(selectedFilter).slideDown();
+            }, 300);
+
+        });
+    })(jQuery);
+</script>
+
+
+}
