--- a/Tycoon/Views/Shared/_Layout.cshtml
+++ b/Tycoon/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿@using Tycoon.Utility
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -13,7 +14,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-info border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Tycoon</a>
+                <a class="navbar-brand" asp-area="Customer" asp-controller="Home" asp-action="Index">Tycoon</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -21,38 +22,44 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <partial name="_LoginPartial" />
                     <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle text-dark" 
-                               href="#" id="navbarDropDownMenuLink" 
-                               role="button" data-toggle="dropdown" 
-                               aria-haspopup="true" aria-expanded="false">
-                                Content Management
+
+                        @if (User.IsInRole(StaticDetail.ManagerUser))
+                        {
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle text-dark"
+                                   href="#" id="navbarDropDownMenuLink"
+                                   role="button" data-toggle="dropdown"
+                                   aria-haspopup="true" aria-expanded="false">
+                                    Content Management
+                                </a>
+                                <div class="dropdown-menu" aria-labelledby="navbarDropDownMenuLink">
+                                    <a class="dropdown-item"
+                                       asp-action="Index"
+                                       asp-controller="Category"
+                                       asp-area="Admin">Category</a>
+                                    <a class="dropdown-item"
+                                       asp-action="Index"
+                                       asp-controller="SubCategory"
+                                       asp-area="Admin">Sub Category</a>
+                                    <a class="dropdown-item"
+                                       asp-action="Index"
+                                       asp-controller="Service"
+                                       asp-area="Admin">Services</a>
+                                    <a class="dropdown-item"
+                                       asp-action="Index"
+                                       asp-controller="Coupon"
+                                       asp-area="Admin">Coupons</a>
+                                    <a class="dropdown-item"
+                                       asp-action="Index"
+                                       asp-controller="User"
+                                       asp-area="Admin">Users</a>
+                                </div>
+                            </li>
+                        }
+                        <li class="text-black-50" >
+                            <a href="#" class="nav-link">
+                                <i class="fas fa-shopping-cart"></i> &nbsp; (0)
                             </a>
-                            <div class="dropdown-menu" aria-labelledby="navbarDropDownMenuLink">
-                                <a class="dropdown-item" 
-                                   asp-action="Index" 
-                                   asp-controller="Category"
-                                   asp-area="Admin">Category</a>
-                                <a class="dropdown-item"
-                                   asp-action="Index" 
-                                   asp-controller="SubCategory"
-                                   asp-area="Admin">Sub Category</a>
-                                <a class="dropdown-item"
-                                   asp-action="Index" 
-                                   asp-controller="Service"
-                                   asp-area="Admin">Services</a>
-                                <a class="dropdown-item"
-                                   asp-action="Index" 
-                                   asp-controller="Coupon"
-                                   asp-area="Admin">Coupons</a>
-                                <a class="dropdown-item">Users</a>
-                            </div>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                     </ul>
                 </div>
