--- a/Tycoon/wwwroot/css/site.css
+++ b/Tycoon/wwwroot/css/site.css
@@ -117,3 +117,8 @@ body {
         background-color: #545b62;
         color:#fff;
     }
+
+.form-control:disabled, .form-control[readonly] {
+    background-color: white;
+    opacity: 1;
+}
