--- a/Tycoon/Areas/Customer/Views/Cart/Index.cshtml
+++ b/Tycoon/Areas/Customer/Views/Cart/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@model Tycoon.Models.ViewModels.OrderDetailsCart
+@using Tycoon.Utility
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -127,3 +128,20 @@
     }
 </form>
 
+@section Scripts{ 
+
+<script>
+    $(function () {
+        var couponCode = document.getElementById("txtCouponCode").value;
+
+        if (couponCode.length > 0) {
+            document.getElementById('btnCoupon').style.display = 'none';
+            document.getElementById('btnRemoveCoupon').style.display = '';
+        } else {
+            document.getElementById('btnCoupon').style.display = '';
+            document.getElementById('btnRemoveCoupon').style.display = 'none';
+        }
+
+    });
+</script>
+}
