--- a/Tycoon/Views/Shared/_Layout.cshtml
+++ b/Tycoon/Views/Shared/_Layout.cshtml
@@ -9,6 +9,8 @@
     <title>@ViewData["Title"] - Tycoon</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
+    <link rel="stylesheet" href="~/css/jquery-ui.css" />
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.css">
     <script src="https://kit.fontawesome.com/398a7dec8f.js" crossorigin="anonymous"></script>
     <script src="https://cdn.tiny.cloud/1/xrfiuk4xpuuowrdbhs77w6cguny905h5d0cbg45q8h1t58b2/tinymce/5/tinymce.min.js"></script>
 </head>
@@ -63,7 +65,7 @@
                             <li class="text-black-50">
                                 <a asp-area="Customer"
                                    asp-controller="Cart"
-                                  asp-action="Index"  class ="nav-link">
+                                   asp-action="Index" class="nav-link">
                                     @{
                                         var count = HttpContextAccessor.HttpContext.Session.GetInt32(@StaticDetail.ssServicesCount);
                                     }
@@ -74,7 +76,9 @@
                         else
                         {
                             <li class="text-black-50">
-                                <a href="#" class="nav-link">
+                                <a asp-area="Customer"
+                                   asp-controller="Cart"
+                                   asp-action="Index" class="nav-link">
                                     <i class="fas fa-shopping-cart"></i> &nbsp; (0)
                                 </a>
                             </li>
@@ -98,6 +102,7 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="~/js/jquery-ui.js" ></script>
     @RenderSection("Scripts", required: false)
 </body>
 </html>
