--- a/Tycoon/Areas/Customer/Views/_ViewImports.cshtml
+++ b/Tycoon/Areas/Customer/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using Tycoon
 @using Tycoon.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper Tycoon.TagHelpers.*, Tycoon
